--- a/pageTask.html
+++ b/pageTask.html
@@ -15,6 +15,9 @@
 	<body>
 		<header>
 			<div class="little-personal">
+                <a href="./index.html">
+                    <i class="fas fa-solid fa-arrow-left" id="back-button"></i>
+                </a>
 				<img id="little-personal__img" src="./assets/img/w_icon_list.png">
 				<span id="little-personal__text">To Do List</span>
 			</div>
@@ -42,10 +45,9 @@
                       <option value="3">Active</option>
                     </select>
                 </div>
-                <ul value="" id ="list_tasks" class="list-group rounded-0 bg-transparent">
-                </ul>
-			</div>
-		</main>
+                <ul id ="list_tasks" class="list-group form-check flex-row-1 rounded-0 bg-transparent"></ul>
+            </div>
+        </main>
 		<footer>
 			<ul class="footer-ul">
 				<li>
